correctly aligned welcome text in index.html and style.css

--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ h1 {
     justify-content: space-evenly;
 }
 
+#homeText {
+    text-align: center;
+}
+
 #personal {
     width: 100%;
     height: 50%;
